# ouroboros

./: .gitignore  Cargo.toml  README.md  publish.sh
.github/workflows/: default.yml
examples/: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  expand.rs
examples/src/: lib.rs  main.rs  ok_tests.rs
examples/src/fail_tests/: auto_covariant.rs  auto_covariant.stderr  borrow_before_declaration.rs  borrowchk_custom_drop.rs  borrowchk_custom_drop.stderr  borrowchk_external_lifetime.rs  borrowchk_external_lifetime.stderr  move_ref_not_borrowed.rs  move_ref_not_borrowed.stderr  move_ref_out_of_bound.rs  move_ref_out_of_bound.stderr  move_ref_outside_closure.rs  move_ref_outside_closure.stderr  no_box_non_aliasable.rs  no_box_non_aliasable.stderr  reborrow_external_ref.stderr  refuse_non_std_box.rs  refuse_non_std_box.stderr  swap_refs_for_use_after_free.rs  swap_refs_for_use_after_free.stderr  use_after_free.rs  use_after_free.stderr  use_moved_ref_after_free.rs  use_moved_ref_after_free.stderr
ouroboros/: Cargo.toml  LICENSE_MIT
ouroboros/src/: lib.rs
ouroboros_macro/: Cargo.toml  LICENSE_APACHE
ouroboros_macro/src/: covariance_detection.rs  info_structures.rs  lib.rs  parse.rs  utils.rs
ouroboros_macro/src/generate/: constructor.rs  derives.rs  drop.rs  into_heads.rs  mod.rs  struc.rs  summon_borrowchk.rs  summon_checker.rs  try_constructor.rs  type_asserts.rs  with.rs  with_all.rs  with_each.rs  with_mut.rs
