[package]
name = "ouroboros_examples"
version = "0.17.0"
authors = ["Joshua Maros <joshua-maros@github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Examples for the ouroboros crate."
documentation = "https://docs.rs/ouroboros_examples"
repository = "https://github.com/joshua-maros/ouroboros"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[lib]

[features]
default = []
# Disables any tests that are not compatible or not intended to run under Miri
miri = []
std = []
__tokio = ["tokio", "std"]

[dependencies]
ouroboros = { version = "0.17.0", path = "../ouroboros" }
tokio = { version = "1.27.0", features = [ "macros", "rt" ], optional = true }

[dev-dependencies]
rustversion = "1.0.11"
trybuild = "=1.0.50"
