[package]
name = "ouroboros"
version = "0.15.6"
authors = ["Joshua Maros <joshua-maros@github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Easy, safe self-referential struct generation."
readme = "../README.md"
documentation = "https://docs.rs/ouroboros"
repository = "https://github.com/joshua-maros/ouroboros"

[dependencies]
aliasable = "0.1.3"
ouroboros_macro = { version = "0.15.6", path = "../ouroboros_macro" }

[features]
default = ["std"]
std = ["ouroboros_macro/std"]
