[package]
name = "ouroboros_macro"
version = "0.9.3"
authors = ["Joshua Maros <joshua-maros@github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Proc macro for ouroboros crate."
documentation = "https://docs.rs/ouroboros_macro"
repository = "https://github.com/joshua-maros/ouroboros"

[lib]
proc-macro = true

[dependencies]
Inflector = { version = "0.11", default-features = false }
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
